--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="welcome_background">#0E6D68</color>
+    <color name="button_color">#31B5AD</color>
+    <color name="text_background">#D6F0CA</color>
+    <color name="main_background">#C9F7F4</color>
 </resources>
