--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -36,7 +36,12 @@
         android:id="@+id/fragment_container"
         android:name="com.example.foodwizard.Fragments.list_meal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:context=".Record" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
