change some stucture logic

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="button_color">#31B5AD</color>
     <color name="text_background">#D6F0CA</color>
     <color name="main_background">#C9F7F4</color>
+    <color name="navigation_color">#7985A3</color>
 </resources>
