--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
-    tools:context=".Record">
+    tools:context=".Fragments.Record">
 
     <TextView
         android:id="@+id/title"
@@ -33,7 +33,7 @@
     <androidx.fragment.app.FragmentContainerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment_container"
+        android:id="@+id/content"
         android:name="com.example.foodwizard.Fragments.list_meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,7 +41,6 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:context=".Record" />
-
+        tools:context=".Fragments.Record" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
