--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/record"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
@@ -15,7 +14,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="72dp"
         android:gravity="top"
-        android:text="@string/record_main"
+        android:text="@string/recommend_Recipe"
         android:textAppearance="@style/main_text"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
