--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -2,17 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_recipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
     tools:context=".Fragments.Record">
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="128dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/flowerbg" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="154dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="32dp"
         android:gravity="top"
         android:text="@string/recommend_Recipe"
         android:textAppearance="@style/main_text"
@@ -33,14 +42,15 @@
     <androidx.fragment.app.FragmentContainerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/content"
+        android:id="@+id/meals"
         android:name="com.example.foodwizard.Fragments.list_meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginLeft="8dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         tools:context=".Fragments.Record" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
