--- a/app/src/main/res/layout/list_item_meal.xml
+++ b/app/src/main/res/layout/list_item_meal.xml
@@ -2,22 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
+    android:clipToOutline="true"
+    android:background="@drawable/layout_bg"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/bound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bound" />
 
     <ImageView
         android:id="@+id/food"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/addbutton" />
@@ -27,10 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/record_meal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="20dp"
+        style="@style/wizard_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bound"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/food" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
