--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="text_background">#D6F0CA</color>
     <color name="main_background">#C9F7F4</color>
     <color name="navigation_color">#7985A3</color>
+    <color name="item_default">#A5F29E</color>
+    <color name="item_selected">#DCF29E</color>
+
 </resources>
