--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
-    tools:context=".Fragments.Record">
+    tools:context=".Fragments.Recipe">
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
@@ -18,10 +19,10 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="410dp"
-        android:layout_height="154dp"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="72dp"
         android:gravity="top"
         android:text="@string/recommend_Recipe"
         android:textAppearance="@style/main_text"
@@ -42,15 +43,17 @@
     <androidx.fragment.app.FragmentContainerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/meals"
-        android:name="com.example.foodwizard.Fragments.list_meal"
+        android:id="@+id/recipes"
+        android:name="com.example.foodwizard.Fragments.list_recipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:context=".Fragments.Record" />
+
+        tools:context=".Fragments.Recipe" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
