--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,8 +11,8 @@
         tools:layout="@layout/fragment_record"
         android:label="Record" >
         <action
-            android:id="@+id/record_to_recipe"
-            app:destination="@id/nav_recipe" />
+            android:id="@+id/show_detail"
+            app:destination="@id/nav_detail_meal" />
     </fragment>
 
     <fragment
@@ -31,5 +31,11 @@
         android:id="@+id/nav_personal"
         android:name="com.example.foodwizard.Fragments.PersonalInfo"
         tools:layout="@layout/fragment_personal_info"
+        android:label="Recipe" />
+
+    <fragment
+        android:id="@+id/nav_detail_meal"
+        android:name="com.example.foodwizard.Fragments.detail_meal"
+        tools:layout="@layout/detail_item_meal"
         android:label="Recipe" />
 </navigation>
