--- a/app/src/main/res/layout/detail_item_meal.xml
+++ b/app/src/main/res/layout/detail_item_meal.xml
@@ -23,15 +23,15 @@
         android:text="Food_name"
         android:padding="20dp"
         style="@style/wizard_text"
-        app:layout_constraintEnd_toStartOf="@id/time"
+        app:layout_constraintEnd_toStartOf="@id/possibility"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/food" />
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/possibility"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="YY/MM/DD"
+        android:text="Possibility"
         android:padding="20dp"
         style="@style/wizard_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         style="@style/wizard_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/time" />
+        app:layout_constraintTop_toBottomOf="@id/possibility" />
 
 
 
