--- a/app/src/main/res/layout/fragment_uploadmeal.xml
+++ b/app/src/main/res/layout/fragment_uploadmeal.xml
@@ -7,6 +7,22 @@
     tools:context=".Fragments.uploadmeal">
 
     <Button
+        android:id="@+id/save"
+        style="@style/wizard_button"
+        android:layout_width="274dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="save"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upload"
+        app:layout_constraintVertical_bias="0.051" />
+
+    <Button
         android:id="@+id/upload"
         style="@style/wizard_button"
         android:layout_width="274dp"
@@ -14,8 +30,8 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="10dp"
         android:text="take picture"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
@@ -45,6 +61,5 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/food" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
