--- a/app/src/main/res/layout/detail_item_recipe.xml
+++ b/app/src/main/res/layout/detail_item_recipe.xml
@@ -29,7 +29,7 @@
 
 
     <TextView
-        android:id="@+id/nuitrition"
+        android:id="@+id/nutrition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition This is nuitrition "
