--- a/app/src/main/res/layout/detail_item_meal.xml
+++ b/app/src/main/res/layout/detail_item_meal.xml
@@ -11,6 +11,7 @@
         android:id="@+id/food"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:clipToOutline="true"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,6 +50,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/possibility" />
 
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/nutrition_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/add_meal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:icon="@drawable/baseline_east_24"/>
 
 
 
