--- a/app/src/main/res/layout/fragment_list_shop.xml
+++ b/app/src/main/res/layout/fragment_list_shop.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/shop_recycler_view"
+    android:layout_gravity="fill_vertical"
+    android:layout_marginBottom="300dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Fragments.list_shop">
+    android:layout_height="match_parent">
+</androidx.recyclerview.widget.RecyclerView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
