--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/account"
+        android:id="@+id/email"
         style="@style/wizard_hint_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,8 +51,8 @@
         android:drawableRight="@drawable/account"
         android:drawablePadding="5dp"
         android:ems="13"
-        android:hint="@string/title_activity_register_username"
-        android:inputType="text"
+        android:hint="@string/title_activity_register_email"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account" />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <Button
         android:id="@+id/login"
