--- a/app/src/main/res/layout/detail_item_recipe.xml
+++ b/app/src/main/res/layout/detail_item_recipe.xml
@@ -39,4 +39,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name" />
 
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/nutrition_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/add_meal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:icon="@drawable/baseline_east_24"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
