--- a/app/src/main/res/layout/fragment_update_modal.xml
+++ b/app/src/main/res/layout/fragment_update_modal.xml
@@ -13,11 +13,14 @@
 
         <TextView
             android:id="@+id/modalLabel"
-            android:layout_width="78dp"
-            android:layout_height="30dp"
+            android:layout_width="197dp"
+            android:layout_height="33dp"
             android:layout_marginTop="100dp"
             android:text="@string/enterNew"
+            android:textAlignment="center"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,23 +35,26 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input"
-            app:layout_constraintVertical_bias="0.489" />
+            app:layout_constraintVertical_bias="0.252" />
 
         <TextView
             android:id="@+id/typeLabel"
-            android:layout_width="73dp"
-            android:layout_height="49dp"
-            android:layout_marginTop="68dp"
+            android:layout_width="234dp"
+            android:layout_height="48dp"
             android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/modalLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/modalLabel"
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/input"
             android:layout_width="228dp"
             android:layout_height="76dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="36dp"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
